first version done

--- a/demo/AlbumDemo.less
+++ b/demo/AlbumDemo.less
@@ -6,5 +6,13 @@
  * All rights reserved.
  */
 
+html {
+    box-sizing: border-box;
+    * {
+        box-sizing: inherit;
+    }
+}
+
 @import "../node_modules/kuma-base/theme/orange";
+@import "../node_modules/kuma-base/core";
 @import "../src/Album.less";
