--- a/src/Album.less
+++ b/src/Album.less
@@ -78,6 +78,7 @@
          width: 100%;
          height: 100%;
          background-color: rgba(0, 0, 0, .8);
+				 z-index: 999;
 
 		 > .album-control {
 			 position: absolute;
@@ -115,7 +116,7 @@
 			 }
 		 }
 
-         .album-stage {
+		.album-stage {
 			margin-bottom: -100px;
 			padding-bottom: 100px;
 			padding: 20px 20px 120px;
