--- a/src/Album.less
+++ b/src/Album.less
@@ -231,6 +231,9 @@
   }
   &.thumb-placement-left {
     direction: rtl;
+    & .album-overlay {
+      direction: ltr;
+    }
   }
   .album-cover {
     display: inline-block;
