--- a/src/Album.less
+++ b/src/Album.less
@@ -247,7 +247,7 @@
     padding: 0;
     .album-carousel-control {
       width: @thumb-width;
-      color: red;
+      color: #f00;
       background: @basic-400;
       color: @text-thirdary-color;
       width: 120px;
