--- a/src/Album.less
+++ b/src/Album.less
@@ -135,6 +135,7 @@
     }
     .album-close {
       position: absolute;
+      cursor: pointer;
       right: 16px;
       top: 16px;
       font-size: 30px;
@@ -193,6 +194,7 @@
     &-control {
       position: absolute;
       display: inline-block;
+      cursor: pointer;
       width: 24px;
       height: 72px;
       background-color: rgba(255, 255, 255, .1);
