--- a/src/Album.less
+++ b/src/Album.less
@@ -111,6 +111,11 @@
         }
       }
     }
+    &.album-overlay-no-control {
+      .album-stage {
+        padding: 20px;
+      }
+    }
     .album-stage {
       margin-bottom: -100px;
       padding-bottom: 100px;
