--- a/src/Album.less
+++ b/src/Album.less
@@ -8,6 +8,8 @@
 
 @thumb-width: 120px;
 @thumb-height: 70px;
+@easing-type: ease-out;
+
 .kuma-uxcore-album {
   &.no-rgba {
     .album-overlay {
@@ -26,6 +28,8 @@
   }
   .album-cover {
     position: relative;
+    overflow: hidden;
+    writing-mode: initial;
     > .album-item {
       position: relative;
       width: 100%;
@@ -39,34 +43,49 @@
         right: 0;
         max-width: 100%;
         max-height: 100%;
+        transition: transform @easing-type .5s;
       }
     }
+    &:before {
+      content: '\e63d';
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      margin: -16px 0 0 -16px;
+      width: 32px;
+      height: 32px;
+      background-color: rgba(51, 51, 51, .6);
+      border-radius: 16px 16px;
+      z-index: 2;
+      color: #fff;
+      text-align: center;
+      line-height: 32px;
+      cursor: pointer;
+      opacity: 0;
+      transform: scale(1.2);
+      transition: transform @easing-type .5s, opacity @easing-type .5s;
+    }
+    &:after {
+      content: '';
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0);
+      z-index: 1;
+      transition: background-color @easing-type .5s;
+    }
     &:hover {
+      img {
+        transform: scale(1.05);
+      }
       &:before {
-        content: '\e63d';
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin: -16px 0 0 -16px;
-        width: 32px;
-        height: 32px;
-        background-color: rgba(51, 51, 51, .6);
-        border-radius: 16px 16px;
-        z-index: 2;
-        color: #fff;
-        text-align: center;
-        line-height: 32px;
-        cursor: pointer;
+        opacity: 1;
+        transform: scale(1);
       }
       &:after {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0, 0, 0, .1);
-        z-index: 1;
+        background-color: rgba(0, 0, 0, 0.1);
       }
     }
   }
@@ -78,6 +97,9 @@
     height: 100%;
     background-color: rgba(0, 0, 0, .8);
     z-index: 999;
+    &-hide {
+      display: none;
+    }
     > .album-control {
       position: absolute;
       z-index: 1;
@@ -153,6 +175,17 @@
         content: '\e610';
       }
     }
+    .album-carousel-list {
+      .item-active {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 120px;
+        height: 72px;
+        border: 2px solid #fff;
+        transition: transform @easing-type .375s, left @easing-type .375s;
+      }
+    }
   }
   .album-carousel {
     position: relative;
@@ -166,12 +199,15 @@
       position: relative;
       white-space: nowrap;
       transition: transform cubic-bezier(0.6, 0, 0.3, 1) 1s;
-      > li {
+      > .item {
         position: relative;
         display: inline-block;
         margin: 0 6px;
         width: @thumb-width;
         height: 72px;
+        &-border {
+          display: none;
+        }
         .album-item {
           position: absolute;
           left: 0;
@@ -187,7 +223,7 @@
           max-height: 100%;
         }
         &.active {
-          border: 2px solid #fff;
+          // border: 2px solid #fff;
           .album-item {
             left: -2px;
             top: -2px;
@@ -275,6 +311,11 @@
         color: @text-disabled-color;
       }
     }
+    .album-carousel-list {
+      .item-active {
+        display: none;
+      }
+    }
   }
   &.thumb-placement-left, &.thumb-placement-right {
     .album-cover {
@@ -337,7 +378,7 @@
         .album-carousel-list {
           width: @thumb-width;
           white-space: normal;
-          & > li {
+          & > .item {
             writing-mode: horizontal-tb;
             margin: 0 6px;
             display: block;
@@ -373,3 +414,5 @@
     }
   }
 }
+
+@import './animate.less';
