--- a/src/Album.less
+++ b/src/Album.less
@@ -8,7 +8,6 @@
 
 @thumb-width: 120px;
 @thumb-height: 70px;
-@easing-type: ease-out;
 
 .kuma-uxcore-album {
   &.no-rgba {
@@ -34,6 +33,7 @@
       position: relative;
       width: 100%;
       height: 100%;
+      transition: transform @transition-ease @transition-duration;
       > img {
         position: absolute;
         margin: auto;
@@ -43,7 +43,6 @@
         right: 0;
         max-width: 100%;
         max-height: 100%;
-        transition: transform @easing-type .5s;
       }
     }
     &:before {
@@ -63,7 +62,7 @@
       cursor: pointer;
       opacity: 0;
       transform: scale(1.2);
-      transition: transform @easing-type .5s, opacity @easing-type .5s;
+      transition: transform @transition-ease @transition-duration, opacity @transition-ease @transition-duration;
     }
     &:after {
       content: '';
@@ -74,11 +73,11 @@
       height: 100%;
       background-color: rgba(0, 0, 0, 0);
       z-index: 1;
-      transition: background-color @easing-type .5s;
+      transition: background-color @transition-ease @transition-duration;
     }
     &:hover {
-      img {
-        transform: scale(1.05);
+      > .album-item {
+        transform: scale(1.1);
       }
       &:before {
         opacity: 1;
@@ -112,11 +111,14 @@
       color: @basic-100;
       line-height: 60px;
       text-align: center;
+      transition: background-color @transition-ease @transition-duration;
       &:hover {
         background-color: rgba(255, 255, 255, .2);
         text-decoration: none;
+        cursor: pointer;
       }
       &.disabled {
+        background-color: rgba(255, 255, 255, .1);
         color: rgba(255, 255, 255, .2);
         cursor: default;
       }
@@ -183,7 +185,7 @@
         width: 120px;
         height: 72px;
         border: 2px solid #fff;
-        transition: transform @easing-type .375s, left @easing-type .375s;
+        transition: transform @transition-ease @transition-duration, left @transition-ease @transition-duration;
       }
     }
   }
@@ -205,6 +207,11 @@
         margin: 0 6px;
         width: @thumb-width;
         height: 72px;
+        &:hover {
+          .album-item {
+            transform: scale(1.1);
+          }
+        }
         &-border {
           display: none;
         }
@@ -217,6 +224,7 @@
           z-index: -1;
           text-align: center;
           opacity: .6;
+          transition: all @transition-ease @transition-duration;
         }
         img {
           max-width: 100%;
@@ -225,8 +233,8 @@
         &.active {
           // border: 2px solid #fff;
           .album-item {
-            left: -2px;
-            top: -2px;
+            // left: -2px;
+            // top: -2px;
             opacity: 1;
           }
         }
@@ -242,11 +250,13 @@
       color: @basic-100;
       line-height: 72px;
       font-size: 26px;
+      transition: background-color @transition-ease @transition-duration;
       &:hover {
         background-color: rgba(255, 255, 255, .2);
         text-decoration: none;
       }
       &.disabled {
+        background-color: rgba(255, 255, 255, .1);
         color: rgba(255, 255, 255, .2);
         cursor: default;
       }
@@ -297,7 +307,6 @@
     margin: 0;
     padding: 0;
     .album-carousel-control {
-      color: #f00;
       background: @basic-400;
       color: @text-thirdary-color;
       text-align: center;
@@ -327,6 +336,7 @@
         width: @thumb-width;
         height: 20px;
         line-height: 20px;
+        font-size: 20px;
         &.control-up {
           top: 0;
           &:before {
@@ -348,17 +358,18 @@
         .album-carousel-list {
           width: @thumb-width;
           white-space: normal;
-          & > li {
+          & > .item {
             margin: 6px 0;
             display: block;
+            width: @thumb-width;
+            height: 72px;
             cursor: pointer;
-            &.active {
-              border-color: transparent;
-            }
-            & .album-item {
-              background: #fff;
-              border: 1px solid #ededed;
-            }
+            background: #fff;
+            border: 1px solid #ededed;
+            overflow: hidden;
+          }
+          .album-item {
+            z-index: 1;
           }
         }
       }
@@ -376,20 +387,19 @@
         left: 0;
         overflow: hidden;
         .album-carousel-list {
-          width: @thumb-width;
           white-space: normal;
           & > .item {
+            width: @thumb-width;
+            height: 72px;
             writing-mode: horizontal-tb;
             margin: 0 6px;
             display: block;
             cursor: pointer;
-            &.active {
-              border-color: transparent;
-            }
-            & .album-item {
-              background: #fff;
-              border: 1px solid #ededed;
-            }
+            border: 1px solid #ededed;
+            background: #fff;
+          }
+          .album-item {
+            z-index: 1;
           }
         }
       }
@@ -398,6 +408,7 @@
         width: 20px;
         height: @thumb-height;
         line-height: @thumb-height;
+        font-size: 20px;
         &.control-up {
           left: 0;
           &:before {
