--- a/src/Album.less
+++ b/src/Album.less
@@ -105,15 +105,15 @@
       top: 50%;
       margin-top: -70px;
       width: 60px;
-      height: 60px;
-      background-color: rgba(255, 255, 255, .1);
+      height: 80px;
+      background-color: @dark-alpha-4;
       font-size: 50px;
       color: @basic-100;
-      line-height: 60px;
+      line-height: 80px;
       text-align: center;
       transition: background-color @transition-ease @transition-duration;
       &:hover {
-        background-color: rgba(255, 255, 255, .2);
+        background-color: @dark-alpha-2;
         text-decoration: none;
         cursor: pointer;
       }
@@ -158,7 +158,7 @@
           margin: auto;
           max-width: 100%;
           max-height: 100%;
-          box-shadow: 0 0 10px 5px rgba(0, 0, 0, .6);
+          // box-shadow: 0 0 10px 5px rgba(0, 0, 0, .6);
         }
       }
     }
@@ -196,9 +196,11 @@
     z-index: 1;
     &-container {
       overflow: hidden;
+      text-align: center;
     }
     &-list {
       position: relative;
+      display: inline-block;
       white-space: nowrap;
       transition: transform cubic-bezier(0.6, 0, 0.3, 1) 1s;
       > .item {
@@ -246,13 +248,13 @@
       cursor: pointer;
       width: 24px;
       height: 72px;
-      background-color: rgba(255, 255, 255, .1);
+      background-color: @dark-alpha-4;
       color: @basic-100;
       line-height: 72px;
       font-size: 26px;
       transition: background-color @transition-ease @transition-duration;
       &:hover {
-        background-color: rgba(255, 255, 255, .2);
+        background-color: @dark-alpha-2;
         text-decoration: none;
       }
       &.disabled {
@@ -307,16 +309,16 @@
     margin: 0;
     padding: 0;
     .album-carousel-control {
-      background: @basic-400;
-      color: @text-thirdary-color;
+      background: @normal-alpha-8;
+      color: @normal-alpha-4;
       text-align: center;
       &:hover {
         cursor: pointer;
-        background: @brand-primary-lighter;
-        color: @text-thirdary-color;
+        background: @normal-alpha-7;
+        color: @normal-alpha-3;
       }
       &.disabled {
-        background: @basic-400;
+        background: @bg-disabled-color;
         color: @text-disabled-color;
       }
     }
