--- a/demo/AlbumDemo.less
+++ b/demo/AlbumDemo.less
@@ -15,4 +15,5 @@ html {
 
 @import "../node_modules/kuma-base/theme/orange";
 @import "../node_modules/kuma-base/core";
+@import "../node_modules/uxcore-kuma/dist/orange.css";
 @import "../src/Album.less";
