Support custom buttons

--- a/src/Album.less
+++ b/src/Album.less
@@ -178,6 +178,7 @@
           text-align: center;
           cursor: pointer;
           position: relative;
+          vertical-align: top;
           &:before {
             content: '';
             width: 1px;
