--- a/demo/AlbumDemo.less
+++ b/demo/AlbumDemo.less
@@ -16,4 +16,5 @@ html {
 @import "../node_modules/kuma-base/theme/orange";
 @import "../node_modules/kuma-base/core";
 @import "../node_modules/uxcore-kuma/dist/orange.css";
+@import "../node_modules/uxcore-icon/src/Icon";
 @import "../src/Album.less";
